# ganesh

./: .gitignore  .pre-commit-config.yaml  .yamloom.py  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml  pytest.toml  release-please-config.json  ruff.toml  ty.toml
.github/workflows/: benchmark.yml  coverage.yml  release-python.yml  release.yml  rust.yml  test-build.yml
benches/: benchmark_matrix.rs  bfgs_benchmark.rs  derivatives.rs  generic_scalar_prototype.rs  lbfgs_benchmark.rs  lbfgsb_benchmark.rs  microkernels.rs  nelder_mead_benchmark.rs  rosenbrock_benchmark.rs
docs/: dev-baselines.md
examples/: generic_numeric.rs  generic_scalar_backend.rs  profile_baseline_metrics.rs  profile_hessian_memory.rs  profile_mcmc_memory.rs  readme.rs
examples/multimodal_ess/: .justfile  main.rs  visualize.py
examples/multistart/: .justfile  main.rs  visualize.py
examples/multivariate_normal_ess/: .justfile  main.rs  requirements.txt  visualize.py
examples/multivariate_normal_fit/: .justfile  main.rs  visualize.py
examples/periodic_fit/: .justfile  main.rs  visualize.py
examples/pso/: .justfile  main.rs  requirements.txt  visualize.py
python/ganesh/: __init__.py  __init__.pyi  _defaults.py  _ganesh.pyi  _typing.py  config.py  errors.py  run_options.py
python/tests/: test_package.py
scripts/: profile_hessian_memory.sh  profile_mcmc_memory.sh  profile_with_rss.py
src/: abort_signal.rs  collections.rs  core.rs  error.rs  lib.rs  main.rs  observers.rs  test_functions.rs  utils.rs
src/algorithms/: bfgs.rs  gradient_descent.rs  lbfgs.rs  lbfgsb.rs  line_search.rs  mod.rs  nelder_mead.rs  newton.rs  pso.rs
src/algorithms/gradient/: adam.rs  backend_lbfgsb.rs  conjugate_gradient.rs  gradient_status.rs  lbfgsb.rs  mod.rs  trust_region.rs
src/algorithms/gradient_free/: backend_cmaes.rs  backend_nelder_mead.rs  backend_simulated_annealing.rs  cmaes.rs  differential_evolution.rs  gradient_free_status.rs  mod.rs  nelder_mead.rs  simulated_annealing.rs
src/algorithms/line_search/: backend_strong_wolfe.rs  backtracking_line_search.rs  hager_zhang.rs  hager_zhang_line_search.rs  mod.rs  more_thuente.rs  more_thuente_line_search.rs  strong_wolfe.rs  strong_wolfe_line_search.rs
src/algorithms/mcmc/: aies.rs  aimes.rs  backend_aies.rs  backend_ess.rs  ensemble_status.rs  ess.rs  mod.rs
src/algorithms/particles/: backend_pso.rs  mod.rs  pso.rs  swarm.rs  swarm_status.rs
src/core/: abort_signal.rs  abort_signals.rs  bound.rs  callbacks.rs  checkpoints.rs  config.rs  engine.rs  eval_counts.rs  gradient_status.rs  linalg.rs  mcmc_diagnostics.rs  minimization_result.rs  minimizer.rs  mod.rs  multistart.rs  point.rs  problem.rs  scalar.rs  status.rs  summary.rs  swarm_status.rs  transforms.rs  utils.rs
src/legacy/: mod.rs  observer.rs
src/legacy/samplers/: aies.rs  ess.rs  mod.rs
src/legacy/swarms/: mod.rs  pso.rs
src/prototype/: mod.rs  scalar.rs
src/python/: callbacks.rs  config.rs  errors.rs  eval_counts.rs  extract.rs  mod.rs  module.rs  numeric.rs  output.rs  run_options.rs  schema.rs  status.rs  summary.rs
src/samplers/: aies.rs  ess.rs  mod.rs
src/solvers/: backtracking_linesearch.rs  lbfgsb.rs  mod.rs  nelder_mead.rs  strong_wolfe_linesearch.rs
src/solvers/gradient/: gradient_status.rs  lbfgsb.rs  mod.rs
src/solvers/gradient_free/: gradient_free_status.rs  mod.rs  nelder_mead.rs  simulated_annealing.rs
src/solvers/gradientfree/: nelder_mead.rs
src/solvers/line_search/: backtracking_line_search.rs  strong_wolfe_line_search.rs
src/solvers/linesearch/: backtracking_linesearch.rs  mod.rs  strong_wolfe_linesearch.rs
src/solvers/particles/: mod.rs  pso.rs  swarm.rs  swarm_status.rs
src/swarms/: mod.rs  pso.rs
src/test_functions/: mod.rs  rastrigin.rs  rosenbrock.rs
src/traits/: abort_signal.rs  algorithm.rs  backend_transform.rs  boundable.rs  boundlike.rs  callback.rs  checkpoint.rs  config.rs  cost_function.rs  linesearch.rs  mod.rs  numeric_problem.rs  observer.rs  solver.rs  status.rs  transform.rs
tests/: generic_extensibility.rs  python_helpers.rs
