[package]
name = "ganesh"
version = "0.22.0"
edition = "2021"
description = "Function minimization in Rust, simplified"
documentation = "https://docs.rs/ganesh"
readme = "README.md"
homepage = "https://github.com/denehoffman/ganesh"
repository = "https://github.com/denehoffman/ganesh"
license = "MIT OR Apache-2.0"
keywords = ["optimization", "minimization"]
categories = ["science", "mathematics"]
rust-version = "1.69.0"
exclude = ["src/main.rs", "*.png", "*.svg", "*.gif", "*.pkl"]

[dependencies]
nalgebra = { version = "0.34.0", features = ["serde-serialize"] }
ctrlc = "3.5.0"
dyn-clone = "1.0.20"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde-pickle = "1.2.0"
spec_math = "0.1.6"
fastrand = "2.3.0"
fastrand-contrib = "0.1.0"
logsumexp = "0.1.0"
parking_lot = { version = "0.12.4", features = ["serde"] }
rustfft = "6.4.0"
num = "0.4.3"
tabled = { version = "0.20.0", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = { version = "3.0.5", package = "codspeed-criterion-compat", features = [
  "html_reports",
] }
approx = "0.5.1"

[features]
default = []
f32 = []

[[bench]]
name = "nelder_mead_benchmark"
harness = false

[[bench]]
name = "lbfgsb_benchmark"
harness = false

[[bench]]
name = "derivatives"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs/docs-header.html"]
