[package]
name = "ganesh"
version = "0.26.2"
edition = "2021"
description = "Minimization and sampling in Rust, simplified"
documentation = "https://docs.rs/ganesh"
readme = "README.md"
homepage = "https://github.com/denehoffman/ganesh"
repository = "https://github.com/denehoffman/ganesh"
license = "MIT OR Apache-2.0"
keywords = ["optimization", "minimization", "mcmc", "sampling"]
categories = ["science", "mathematics"]
rust-version = "1.69.0"
exclude = ["src/main.rs", "*.png", "*.svg", "*.gif", "*.pkl"]

[lib]
bench = false
crate-type = ["rlib", "cdylib"]

[dependencies]
nalgebra = { version = "0.34.2", features = ["serde-serialize"] }
ctrlc = "3.5.2"
dyn-clone = "1.0.20"
thiserror = "2.0.18"
typetag = "0.2.21"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde-pickle = "1.2.0"
spec_math = "0.1.6"
fastrand = "2.3.0"
fastrand-contrib = "0.1.0"
logsumexp = "0.1.0"
parking_lot = { version = "0.12.5", features = ["serde"] }
rustfft = "6.4.1"
num = "0.4.3"
tabled = { version = "0.20.0", default-features = false, features = ["std"] }
pyo3 = { version = "0.28.3", optional = true, features = ["abi3", "generate-import-lib", "auto-initialize"] }
numpy = { version = "0.28.0", optional = true }

[dev-dependencies]
criterion = { version = "4.4.1", package = "codspeed-criterion-compat", features = [
  "html_reports",
] }
approx = "0.5.1"

[features]
default = []
f32 = []
python = ["dep:pyo3", "dep:numpy"]
python-module = ["python", "pyo3/extension-module"]

[[bench]]
name = "nelder_mead_benchmark"
harness = false

[[bench]]
name = "lbfgsb_benchmark"
harness = false

[[bench]]
name = "derivatives"
harness = false

[[bench]]
name = "benchmark_matrix"
harness = false

[[bench]]
name = "microkernels"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs/docs-header.html"]

[profile.profiling]
inherits = "release"
debug = true
