[package]
name = "ganesh"
version = "0.28.1"
edition = "2021"
description = "Minimization and sampling in Rust, simplified"
documentation = "https://docs.rs/ganesh"
readme = "README.md"
homepage = "https://github.com/denehoffman/ganesh"
repository = "https://github.com/denehoffman/ganesh"
license = "MIT OR Apache-2.0"
keywords = ["optimization", "minimization", "mcmc", "sampling"]
categories = ["science", "mathematics"]
rust-version = "1.83.0"
exclude = ["src/main.rs", "*.png", "*.svg", "*.gif", "*.pkl"]

[lib]
bench = false
crate-type = ["rlib"]

[dependencies]
nalgebra = { version = "0.35.0", features = ["serde-serialize"] }
spec_math = "0.1.6"
logsumexp = "0.1.0"
ctrlc = "3.5.2"
dyn-clone = "1.0.20"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
fastrand = "2.4.1"
parking_lot = { version = "0.12.5", features = ["serde"] }
rustfft = "6.4.1"
tabled = { version = "0.20.0", default-features = false, features = ["std"] }
ndarray = { version = "0.17.2", optional = true }
ndarray-linalg = { version = "0.18.1", optional = true, default-features = false }
pyo3 = { version = "0.29.0", optional = true, features = ["experimental-inspect"] }
numpy = { version = "0.29.0", optional = true }

[dev-dependencies]
criterion = { version = "5.0.1", package = "codspeed-criterion-compat", features = [
  "html_reports",
] }
approx = "0.5.1"

[features]
default = []
backend-ndarray = ["dep:ndarray", "dep:ndarray-linalg"]
python = ["dep:pyo3", "dep:numpy"]

[[bench]]
name = "benchmark_matrix"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs/docs-header.html"]

[profile.profiling]
inherits = "release"
debug = true
