[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "ganesh-rs"
description = "Helper library for the ganesh Rust crate"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
license = { text = "MIT OR Apache-2.0" }
dependencies = ["numpy"]

[tool.maturin]
python-source = "python"
module-name = "ganesh._ganesh"
features = ["python-module"]
